@@ -1,7 +1,7 @@
 #!/bin/bash
 # Script that runs the tests
 #
-# Version: 20220807
+# Version: 20220819
 
 EXIT_SUCCESS=0;
 EXIT_FAILURE=1;
@@ -83,12 +83,8 @@ run_configure_make_check_with_asan()
 	then
 		return ${EXIT_SUCCESS};
 	fi
-	# Using libasan is platform dependent.
-	if test ${LIBASAN} != "/lib64/libasan.so.4" && test ${LIBASAN} != "/lib64/libasan.so.5";
-	then
-		return ${EXIT_SUCCESS};
-	fi
 
+	# Using libasan is platform dependent.
 	export CPPFLAGS="-DHAVE_ASAN";
 	export CFLAGS="-fno-omit-frame-pointer -fsanitize=address -g";
 	export LDFLAGS="-fsanitize=address -g";
